--- a/Oficina/Oficina - Aula 1.1.ipynb
+++ b/Oficina/Oficina - Aula 1.1.ipynb
@@ -119,10 +119,10 @@
    "metadata": {},
    "source": [
     "### 1 - Média e Desvio Padrão de consumo de:\n",
-    "* __Cerveja__\n",
-    "* __Licor__\n",
-    "* __Vinho__\n",
-    "* __Alcool puro__"
+    "* __Cerveja__ = beer_servings\n",
+    "* __Licor__ = spirit_servings\n",
+    "* __Vinho__ = wine_servings\n",
+    "* __Litros de Alcool puro__ = total_litres_of_pure_alcohol"
    ]
   },
   {
