--- a/Oficina/Oficina - Aula 1.1.ipynb
+++ b/Oficina/Oficina - Aula 1.1.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -399,76 +399,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>Moldova</td>\n",
-       "      <td>109</td>\n",
-       "      <td>226</td>\n",
-       "      <td>18</td>\n",
-       "      <td>6.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>111</td>\n",
-       "      <td>2</td>\n",
+       "      <th>117</th>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>376</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>Uruguay</td>\n",
-       "      <td>115</td>\n",
-       "      <td>35</td>\n",
-       "      <td>220</td>\n",
-       "      <td>6.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>St. Vincent &amp; the Grenadines</td>\n",
-       "      <td>120</td>\n",
-       "      <td>221</td>\n",
-       "      <td>11</td>\n",
-       "      <td>6.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Bahamas</td>\n",
-       "      <td>122</td>\n",
-       "      <td>176</td>\n",
-       "      <td>51</td>\n",
-       "      <td>6.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Lithuania</td>\n",
-       "      <td>343</td>\n",
-       "      <td>244</td>\n",
-       "      <td>56</td>\n",
-       "      <td>12.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>346</td>\n",
-       "      <td>117</td>\n",
-       "      <td>175</td>\n",
-       "      <td>11.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>Gabon</td>\n",
-       "      <td>347</td>\n",
-       "      <td>98</td>\n",
-       "      <td>59</td>\n",
-       "      <td>8.9</td>\n",
+       "      <td>6.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
@@ -479,12 +415,76 @@
        "      <td>11.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>Namibia</td>\n",
-       "      <td>376</td>\n",
-       "      <td>3</td>\n",
+       "      <th>62</th>\n",
+       "      <td>Gabon</td>\n",
+       "      <td>347</td>\n",
+       "      <td>98</td>\n",
+       "      <td>59</td>\n",
+       "      <td>8.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>346</td>\n",
+       "      <td>117</td>\n",
+       "      <td>175</td>\n",
+       "      <td>11.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>343</td>\n",
+       "      <td>215</td>\n",
+       "      <td>56</td>\n",
+       "      <td>10.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Bahamas</td>\n",
+       "      <td>122</td>\n",
+       "      <td>176</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>St. Vincent &amp; the Grenadines</td>\n",
+       "      <td>120</td>\n",
+       "      <td>221</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>115</td>\n",
+       "      <td>35</td>\n",
+       "      <td>220</td>\n",
+       "      <td>6.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>111</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>6.8</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>Moldova</td>\n",
+       "      <td>109</td>\n",
+       "      <td>226</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -493,35 +493,35 @@
       ],
       "text/plain": [
        "                          country  beer_servings  spirit_servings  \\\n",
-       "139                       Moldova            109              226   \n",
-       "189                       Vietnam            111                2   \n",
-       "185                       Uruguay            115               35   \n",
-       "145  St. Vincent & the Grenadines            120              221   \n",
-       "11                        Bahamas            122              176   \n",
-       "..                            ...            ...              ...   \n",
-       "98                      Lithuania            343              244   \n",
-       "65                        Germany            346              117   \n",
-       "62                          Gabon            347               98   \n",
-       "45                 Czech Republic            361              170   \n",
        "117                       Namibia            376                3   \n",
+       "45                 Czech Republic            361              170   \n",
+       "62                          Gabon            347               98   \n",
+       "65                        Germany            346              117   \n",
+       "135                        Poland            343              215   \n",
+       "..                            ...            ...              ...   \n",
+       "11                        Bahamas            122              176   \n",
+       "145  St. Vincent & the Grenadines            120              221   \n",
+       "185                       Uruguay            115               35   \n",
+       "189                       Vietnam            111                2   \n",
+       "139                       Moldova            109              226   \n",
        "\n",
        "     wine_servings  total_litres_of_pure_alcohol  \n",
-       "139             18                           6.3  \n",
-       "189              1                           2.0  \n",
-       "185            220                           6.6  \n",
-       "145             11                           6.3  \n",
-       "11              51                           6.3  \n",
-       "..             ...                           ...  \n",
-       "98              56                          12.9  \n",
-       "65             175                          11.3  \n",
-       "62              59                           8.9  \n",
-       "45             134                          11.8  \n",
        "117              1                           6.8  \n",
+       "45             134                          11.8  \n",
+       "62              59                           8.9  \n",
+       "65             175                          11.3  \n",
+       "135             56                          10.9  \n",
+       "..             ...                           ...  \n",
+       "11              51                           6.3  \n",
+       "145             11                           6.3  \n",
+       "185            220                           6.6  \n",
+       "189              1                           2.0  \n",
+       "139             18                           6.3  \n",
        "\n",
        "[76 rows x 5 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,12 +537,12 @@
    "source": [
     "### 5 - Países com consumo de álcool acima do Brasil:\n",
     "\n",
-    "O consumo de anual de álcool por pessoa no Brasil é de __7.2__"
+    "O consumo de anual de álcool por pessoa no Brasil é de __7.2__ litros."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "23                           7.2  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "15                           14.4  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
